# BatteryManagerSytem

./: CMakeLists.txt  Readme.md  Requirements.txt  package.xml
launch/: manager.launch  robot.launch  simulation.launch
src/: manager.py  robot.py
src/auxiliar_types/: battery.py
srv/: Control.srv  Register.srv
